# Soroban-Registry

./: README.md  docker-compose.yml
backend/: Cargo.toml
backend/api/: Cargo.toml
backend/api/src/: analytics_handlers.rs  auth.rs  backup_routes.rs  cache.rs  clone_federation_handlers.rs  contract_events.rs  dependency_handlers.rs  error.rs  handlers.rs  lib.rs  main.rs  openapi.rs  org_handlers.rs  resource_tracking.rs  routes.rs  security_scan_handlers.rs  state.rs  subscription_handlers.rs
backend/contract_abi/: Cargo.toml
backend/contract_abi/src/: parser.rs
backend/indexer/: Cargo.toml  README.md
backend/indexer/src/: db.rs  main.rs  rpc.rs
backend/seeder/src/: data.rs
backend/shared/src/: abi.rs  models.rs
cli/: openapi.html  openapi.md  openapi.yaml
cli/src/: commands.rs  costs.rs  main.rs  migration.rs  patch.rs  shell.rs  wizard.rs
cli/templates/: bridge.rs  dex.rs  lending.rs  oracle.rs  properties.toml.example  token.rs
cli/tests/: coverage_integration.rs  dummy_abi.json  test_command_integration.rs
compliance_toolkit/: main.py
database/migrations/: 003_analytics.sql  004_add_upgrade_strategy.sql  005_create_migrations_table.sql  006_dependencies.sql  009_canary_releases.sql
docs/: ARCHITECTURE.md  COST_ESTIMATION.md  DISASTER_RECOVERY_PLAN.md  INCIDENT_RESPONSE.md  MAINTENANCE_MODE.md  MATURITY_LEVELS.md  REGRESSION_TESTING.md  REGRESSION_TESTING_QUICKSTART.md
frontend/app/analytics/: page.tsx
frontend/components/: ActivityFeed.tsx  DeprecationBanner.tsx  ErrorBoundary.tsx  Navbar.tsx  PageViewTracker.tsx  Providers.tsx  Toast.tsx  ToastContainer.tsx  UserInteractionTracker.tsx
frontend/hooks/: useTheme.ts  useToast.ts
frontend/lib/: api.ts  errors.ts  formValidation.ts  mock-data.ts
frontend/providers/: ThemeProvider.tsx  ToastProvider.tsx
observability/alertmanager/: alertmanager.yml
observability/grafana/: api_dashboard.json  contracts_dashboard.json  db_dashboard.json  publishers_dashboard.json  slo_dashboard.json
observability/loki/: loki-config.yaml
observability/prometheus/: alert_rules.yml  alerts.yml  prometheus.yml
observability/promtail/: promtail-config.yaml
scripts/: ci-check.sh  disaster_recovery.sh  drill_automation.sh  test_regression_system.sh  verify_drp_acceptance_criteria.sh
soroban-registry/: .soroban-lint.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
soroban-registry/crates/soroban-lint-cli/: Cargo.toml
soroban-registry/crates/soroban-lint-core/: Cargo.toml
soroban-registry/crates/soroban-lint-core/src/: lib.rs
soroban-registry/crates/soroban-lint-core/src/rules/: deprecated_api_usage.rs  direct_storage_clear.rs  inefficient_clones.rs  integer_overflow.rs  panic_in_contract.rs  unbounded_loops.rs
soroban-registry/crates/soroban-load-balancer/: Cargo.toml
soroban-registry/crates/soroban-load-balancer/src/algorithms/: least_loaded.rs
soroban-registry/crates/soroban-state-core/: Cargo.toml
soroban-registry/crates/soroban-state-core/src/: exporter.rs  lib.rs
soroban-registry/examples/: batch-manifest.yaml
soroban-registry/templates/: github-actions.yml  pre-commit
soroban-registry/tests/: integration_tests.rs
(+25 files in other folders)
