[package]
name = "soroban-lint-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "soroban-registry"
path = "src/main.rs"

[dependencies]
soroban-lint-core = { path = "../soroban-lint-core" }
soroban-state-core = { path = "../soroban-state-core" }
soroban-load-balancer = { path = "../soroban-load-balancer" }
soroban-batch = { path = "../soroban-batch" }
syn = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
walkdir = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
