[package]
name = "soroban-lint-core"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
