[package]
name = "soroban-state-core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
stellar-xdr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
colored = { workspace = true }
tabled = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]